--- a/WineQuality.ipynb
+++ b/WineQuality.ipynb
@@ -6,7 +6,7 @@
       "name": "WineQuality.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPnSeELaS0VWs1nmnus3AAw",
+      "authorship_tag": "ABX9TyMmDERX0HcjOn+rTj4z1A2/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -214,19 +214,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "H1rxVuiQLeV-",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "wines_train"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "9hMYRhmaGgnv",
         "colab_type": "code",
         "colab": {}
@@ -259,6 +246,19 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "H1rxVuiQLeV-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "wines_train"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "mZgwjudzJGTT",
         "colab_type": "code",
         "colab": {}
@@ -278,7 +278,6 @@
         "colab": {}
       },
       "source": [
-        "wines_train = wines_train.transpose()\n",
         "wines_train"
       ],
       "execution_count": 0,
@@ -309,6 +308,7 @@
       },
       "source": [
         "train_stats = wines_train.describe()\n",
+        "train_stats = train_stats.transpose()\n",
         "train_stats"
       ],
       "execution_count": 0,
@@ -359,9 +359,6 @@
         "    optimizer='adam', \n",
         "    metrics=['accuracy']\n",
         ")\n",
-        "  #model.compile(loss='mean_squared_error',\n",
-        "  #              optimizer=optimizer,\n",
-        "  #              metrics=['mean_absolute_error', 'mean_squared_error'])\n",
         "  return model\n",
         "  print(\"done\")"
       ],
