--- a/WineQualityLR.ipynb
+++ b/WineQualityLR.ipynb
@@ -6,7 +6,7 @@
       "name": "WineQualityLR.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOTgVuxSxA38tOYCbI7tWPa",
+      "authorship_tag": "ABX9TyN5vAF0T9B8QzDy2JISdaIu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -191,7 +191,8 @@
         "colab_type": "text"
       },
       "source": [
-        "Add a column called type: <br>\n",
+        "# **Is this necessary?**\n",
+        "**Add a column called type**: <br>\n",
         "red = 1<br>\n",
         "white = 0"
       ]
@@ -360,9 +361,7 @@
       },
       "source": [
         "train_labels = wines_train.pop('quality')\n",
-        "test_labels = wines_test.pop('quality')\n",
-        "wines_train.pop('type')\n",
-        "wines_test.pop('type')"
+        "test_labels = wines_test.pop('quality')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -565,20 +564,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "5anQEWd-BrOK",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "loss, mae, mse = model.evaluate(normed_test_data, test_labels, verbose=1)\n",
-        "print(\"Testing set Mean Abs Error: {:5.2f}\".format(mae))"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "sIugdAJcQjka",
@@ -611,8 +596,7 @@
         "colab": {}
       },
       "source": [
-        "prediction_labels = predict_case.pop('quality')\n",
-        "predict_case.pop('type')"
+        "prediction_labels = predict_case.pop('quality')"
       ],
       "execution_count": 0,
       "outputs": []
