--- a/WineQuality.ipynb
+++ b/WineQuality.ipynb
@@ -6,7 +6,7 @@
       "name": "WineQuality.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMmDERX0HcjOn+rTj4z1A2/",
+      "authorship_tag": "ABX9TyPasZiS0GjDWMBDSe4/e+3Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,6 +73,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "B_SyJzX6OjgM",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Load the libraries**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "yT-tH6kSE_V1",
@@ -107,6 +117,19 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9aWDRwFGOnjE",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Load the data**\n",
+        "The data is in two files:<br>\n",
+        ">winequality-white.csv<br>\n",
+        ">winequality-red.csv<br>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "-DaKr4tTFZb3",
@@ -119,7 +142,7 @@
         "white = pd.read_csv(\"winequality-white.csv\", sep=';')\n",
         "\n",
         "# Read in red wine data \n",
-        "red = pd.read_csv(\"winequality-red.csv\", sep=';')"
+        "#red = pd.read_csv(\"winequality-red.csv\", sep=';')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -146,10 +169,32 @@
         "colab": {}
       },
       "source": [
-        "red.tail()"
+        "#red.tail()"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pD2E2UZZO5G9",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Combine the two files into one file called wines**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WCpQv2HYPR9P",
+        "colab_type": "text"
+      },
+      "source": [
+        "Add a column called type: <br>\n",
+        "red = 1<br>\n",
+        "white = 0"
+      ]
     },
     {
       "cell_type": "code",
@@ -161,13 +206,14 @@
       "source": [
         "#combine reds and whites into one dataset\n",
         "# Add `type` column to `red` with value 1\n",
-        "red['type'] = 1\n",
+        "#red['type'] = 1\n",
         "\n",
         "# Add `type` column to `white` with value 0\n",
-        "white['type'] = 0\n",
+        "#white['type'] = 0\n",
         "\n",
         "# Append `white` to `red`\n",
-        "wines = red.append(white, ignore_index=True)"
+        "#wines = red.append(white, ignore_index=True)\n",
+        "wines=white"
       ],
       "execution_count": 0,
       "outputs": []
@@ -186,6 +232,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qiTSR74sO_sS",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Check out the distribution of the quality of wines**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "8e4fGVfT7avb",
@@ -199,6 +255,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xBbo1BJIPG04",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Check for missing data in wines**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "8Oe8kyVIHyrH",
@@ -210,6 +276,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vUrhO4ncPLS2",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Is there a strong correlation between any of the features?** "
+      ]
     },
     {
       "cell_type": "code",
@@ -229,6 +305,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yNfi7Xh3PtSa",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Split the dataset into a training set and a test set**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "usMnFS-mH5sf",
@@ -236,7 +322,7 @@
         "colab": {}
       },
       "source": [
-        "wines_train = wines.sample(frac=0.8,random_state=0)\n",
+        "wines_train = wines.sample(frac=0.5,random_state=0)\n",
         "wines_test = wines.drop(wines_train.index)\n",
         "print(\"done\")"
       ],
@@ -255,6 +341,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "J_XshQkuPd5b",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Remove the labels from the dataset**"
+      ]
     },
     {
       "cell_type": "code",
@@ -282,6 +378,17 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XDNJMcTKP4RJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Convert quality in labels to categorical values**<br>\n",
+        "Is this the correct thing to do?"
+      ]
     },
     {
       "cell_type": "code",
@@ -315,6 +422,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-OZ852UxQSRy",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Normalize the data**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "qUSR2qiZJXZ4",
@@ -333,6 +450,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QFfFXJVCQVe9",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Build the model**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "SkPd6dsHKjOF",
@@ -345,10 +472,8 @@
         "\n",
         "def build_model():\n",
         "  model = keras.Sequential([\n",
-        "    layers.Dense(12, activation=tf.nn.sigmoid,input_shape=([len(wines_train.keys())]),),\n",
-        "    layers.Dense(12, activation=tf.nn.sigmoid),\n",
-        "    layers.Dense(12, activation=tf.nn.sigmoid),\n",
-        "    #layers.Dense(10)\n",
+        "    layers.Dense(32, activation=tf.nn.relu,input_shape=([len(wines_train.keys())]),),  \n",
+        "    layers.Dense(64, activation=tf.nn.relu),\n",
         "    layers.Dense(10, activation='softmax')\n",
         "  ])\n",
         "\n",
@@ -380,6 +505,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0H-i6gZRQY8T",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Train the model**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Q8TCn9MsLQsl",
@@ -387,10 +522,10 @@
         "colab": {}
       },
       "source": [
-        "EPOCHS = 20\n",
+        "EPOCHS = 5\n",
         "history = model.fit(\n",
         "  normed_train_data, train_labels,\n",
-        "  epochs=EPOCHS, validation_split = 0.2, verbose=0)"
+        "  epochs=EPOCHS, validation_split = 0.2, verbose=0, batch_size=20)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -405,10 +540,20 @@
       "source": [
         "hist = pd.DataFrame(history.history)\n",
         "hist['epochs'] = history.epoch\n",
-        "hist.tail()"
+        "hist.tail(20)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kdT_MArFQdTN",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Plot the accuracy and loss**"
+      ]
     },
     {
       "cell_type": "code",
@@ -452,6 +597,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sIugdAJcQjka",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Make a prediction with the model**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "MRHXx8qzv3C_",
@@ -460,8 +615,8 @@
       },
       "source": [
         "predict_case = pd.read_csv(\"prediction_cases.csv\", sep=';')\n",
-        "typew = [0,0,1,1] \n",
-        "predict_case['type'] = typew"
+        "#typew = [0,0,1,1] \n",
+        "#predict_case['type'] = typew"
       ],
       "execution_count": 0,
       "outputs": []
