--- a/WineTypeBC.ipynb
+++ b/WineTypeBC.ipynb
@@ -6,7 +6,7 @@
       "name": "WineTypeBC.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOLbPMgM2fqus5LVOvkuADK",
+      "authorship_tag": "ABX9TyNwU/94n5U09kQrcvBfi3ra",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -322,7 +322,7 @@
         "colab": {}
       },
       "source": [
-        "wines_train = wines.sample(frac=0.8,random_state=0)\n",
+        "wines_train = wines.sample(frac=0.5,random_state=0)\n",
         "wines_test = wines.drop(wines_train.index)\n",
         "print(\"done\")"
       ],
@@ -460,8 +460,8 @@
         "\n",
         "def build_model():\n",
         "  model = keras.Sequential([\n",
-        "    layers.Dense(64, activation=tf.nn.relu,input_shape=([len(wines_train.keys())]),),\n",
-        "    layers.Dense(64, activation=tf.nn.relu),\n",
+        "    layers.Dense(64, activation=tf.nn.sigmoid,input_shape=([len(wines_train.keys())]),),\n",
+        "    layers.Dense(64, activation=tf.nn.tanh),\n",
         "    layers.Dense(1)\n",
         "  ])\n",
         "\n",
@@ -469,7 +469,7 @@
         "\n",
         "  model.compile(loss='mean_squared_error',\n",
         "                optimizer=optimizer,\n",
-        "                metrics=['mean_absolute_error', 'mean_squared_error'])\n",
+        "                metrics=['mean_absolute_error', 'mean_squared_error', 'accuracy'])\n",
         "  \n",
         "  return model\n",
         "  print(\"done\")"
@@ -492,6 +492,19 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "STeikey08EbB",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model.summary()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "0H-i6gZRQY8T",
@@ -509,7 +522,7 @@
         "colab": {}
       },
       "source": [
-        "EPOCHS = 10\n",
+        "EPOCHS = 20\n",
         "history = model.fit(\n",
         "  normed_train_data, train_labels,\n",
         "  epochs=EPOCHS, validation_split = 0.2, verbose=0,batch_size = 16 )"
@@ -557,6 +570,26 @@
         "plt.title('Loss')\n",
         "plt.xlabel('epochs')\n",
         "plt.ylabel('loss')\n",
+        "plt.legend()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WLHCgMby8b9E",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "axes = plt.gca()\n",
+        "axes.set_ylim([0.5,1.1])\n",
+        "plt.plot(hist['accuracy'], label='training accuracy')\n",
+        "plt.plot(hist['val_accuracy'], label='testing accuracy')\n",
+        "plt.title('Accuracy')\n",
+        "plt.xlabel('epochs')\n",
+        "plt.ylabel('acc')\n",
         "plt.legend()"
       ],
       "execution_count": 0,
@@ -623,7 +656,7 @@
       },
       "source": [
         "#Choose number 0,1,2,3\n",
-        "number = 1\n",
+        "number = 3\n",
         "test1 = normed_prediction_cases.loc[[number]]\n",
         "test1.transpose()"
       ],
@@ -682,7 +715,6 @@
         "colab": {}
       },
       "source": [
-        "\n",
         "print(\"prediction is \", rwconvert(prediction))\n",
         "print(\"actual value is \", rwconvert(prediction_labels.iloc[number]) )"
       ],
@@ -697,9 +729,10 @@
         "colab": {}
       },
       "source": [
-        "loss, mae, mse = model.evaluate(normed_test_data, test_labels, verbose=0)\n",
+        "loss, mae, mse,acc = model.evaluate(normed_test_data, test_labels, verbose=0)\n",
         "\n",
-        "print(\"Testing set Mean Abs Error: {:5.2f}\".format(mae))"
+        "print(\"Testing set Mean Abs Error: {:5.2f}\".format(mae))\n",
+        "print(\"Accuracy = \", acc)"
       ],
       "execution_count": 0,
       "outputs": []
