--- a/WineTypeBC.ipynb
+++ b/WineTypeBC.ipynb
@@ -6,7 +6,7 @@
       "name": "WineTypeBC.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNwU/94n5U09kQrcvBfi3ra",
+      "authorship_tag": "ABX9TyPEhFfdZtBmmcLngniM8WCW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -284,7 +284,9 @@
         "colab_type": "text"
       },
       "source": [
-        "# **Is there a strong correlation between any of the features?** "
+        "# **Is there a strong correlation between any of the features?**\n",
+        "\n",
+        "Can the model be simplified (without increasing the mse)  by removing features? "
       ]
     },
     {
@@ -322,6 +324,7 @@
         "colab": {}
       },
       "source": [
+        "#Consider changing the train/test split\n",
         "wines_train = wines.sample(frac=0.5,random_state=0)\n",
         "wines_test = wines.drop(wines_train.index)\n",
         "print(\"done\")"
@@ -444,7 +447,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# **Build the model**"
+        "# **Build the model**\n"
       ]
     },
     {
@@ -462,10 +465,11 @@
         "  model = keras.Sequential([\n",
         "    layers.Dense(64, activation=tf.nn.sigmoid,input_shape=([len(wines_train.keys())]),),\n",
         "    layers.Dense(64, activation=tf.nn.tanh),\n",
+        "    layers.Dense(64, activation=tf.nn.tanh),\n",
         "    layers.Dense(1)\n",
         "  ])\n",
         "\n",
-        "  optimizer = tf.keras.optimizers.RMSprop(0.001)\n",
+        "  optimizer = tf.keras.optimizers.RMSprop(0.1)\n",
         "\n",
         "  model.compile(loss='mean_squared_error',\n",
         "                optimizer=optimizer,\n",
@@ -564,7 +568,7 @@
       },
       "source": [
         "axes = plt.gca()\n",
-        "axes.set_ylim([0,1])\n",
+        "axes.set_ylim([0,25])\n",
         "plt.plot(hist['loss'], label='training loss')\n",
         "plt.plot(hist['val_loss'], label='testing loss')\n",
         "plt.title('Loss')\n",
@@ -584,7 +588,7 @@
       },
       "source": [
         "axes = plt.gca()\n",
-        "axes.set_ylim([0.5,1.1])\n",
+        "axes.set_ylim([0,1])\n",
         "plt.plot(hist['accuracy'], label='training accuracy')\n",
         "plt.plot(hist['val_accuracy'], label='testing accuracy')\n",
         "plt.title('Accuracy')\n",
@@ -692,31 +696,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mcGY5bX04wdb",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def rwconvert(pred):\n",
-        "  if pred == 1:\n",
-        "    rw=\"red\"\n",
-        "  else:\n",
-        "    rw=\"white\"\n",
-        "  return rw"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "FK4OPWwH8gW8",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "print(\"prediction is \", rwconvert(prediction))\n",
-        "print(\"actual value is \", rwconvert(prediction_labels.iloc[number]) )"
+        "print(\"prediction is \", prediction)\n",
+        "print(\"actual value is \", prediction_labels.iloc[number] )"
       ],
       "execution_count": 0,
       "outputs": []
