--- a/WineTypeBC.ipynb
+++ b/WineTypeBC.ipynb
@@ -6,7 +6,7 @@
       "name": "WineTypeBC.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPEhFfdZtBmmcLngniM8WCW",
+      "authorship_tag": "ABX9TyN8HnbTUc8okaU0AxgVUPNm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -286,7 +286,7 @@
       "source": [
         "# **Is there a strong correlation between any of the features?**\n",
         "\n",
-        "Can the model be simplified (without increasing the mse)  by removing features? "
+        "Can the model be simplified (without increasing the mse)  by removing features? <br>\n"
       ]
     },
     {
@@ -317,6 +317,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PDPVGPojat4J",
+        "colab_type": "text"
+      },
+      "source": [
+        "**The fraction variable is a hyperparameter that can be tuned "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "usMnFS-mH5sf",
@@ -324,7 +334,7 @@
         "colab": {}
       },
       "source": [
-        "#Consider changing the train/test split\n",
+        "#Consider changing the ratio of the train/test split\n",
         "wines_train = wines.sample(frac=0.5,random_state=0)\n",
         "wines_test = wines.drop(wines_train.index)\n",
         "print(\"done\")"
@@ -447,7 +457,15 @@
         "colab_type": "text"
       },
       "source": [
-        "# **Build the model**\n"
+        "# **Build the model**\n",
+        "There are several hyper-parameters that can be tuned in this cell. <br>\n",
+        "The size of the layer<br>\n",
+        "The activation functions<br>\n",
+        "The number of layers<br>\n",
+        "The optimizer<br>\n",
+        "The learning rate of the optimizer<br>\n",
+        "The loss function<br>\n",
+        "\n"
       ]
     },
     {
@@ -515,7 +533,8 @@
         "colab_type": "text"
       },
       "source": [
-        "# **Train the model**"
+        "# **Train the model**\n",
+        "Changing the number of epochs can change the performance of the model. <br>"
       ]
     },
     {
@@ -556,7 +575,8 @@
         "colab_type": "text"
       },
       "source": [
-        "# **Plot the loss**"
+        "# **Plot the loss**\n",
+        "This is not a good plot. There is a good possibilty that the model might be too complex. "
       ]
     },
     {
@@ -578,6 +598,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NBE3JcTueWTe",
+        "colab_type": "text"
+      },
+      "source": [
+        "The accuracy plot is terrible. Definitely check the complexity of the model. "
+      ]
     },
     {
       "cell_type": "code",
@@ -606,7 +636,8 @@
         "colab_type": "text"
       },
       "source": [
-        "# **Make a prediction with the model**"
+        "# **Make a prediction with the model**\n",
+        "When making predictions, whatever was done to the data during training, must also be done to all data entered into the model for predictions. "
       ]
     },
     {
@@ -617,6 +648,8 @@
         "colab": {}
       },
       "source": [
+        "#The csv file has 4 wines\n",
+        "#Add tge type to the dataframe\n",
         "predict_case = pd.read_csv(\"prediction_cases.csv\", sep=';')\n",
         "typew = [0,0,1,1] \n",
         "predict_case['type'] = typew"
@@ -632,6 +665,7 @@
         "colab": {}
       },
       "source": [
+        "#pop off the type from the dataframe\n",
         "prediction_labels = predict_case.pop('type')"
       ],
       "execution_count": 0,
@@ -645,6 +679,7 @@
         "colab": {}
       },
       "source": [
+        "#normalize the data\n",
         "normed_prediction_cases = norm(predict_case)\n",
         "normed_prediction_cases "
       ],
@@ -659,6 +694,7 @@
         "colab": {}
       },
       "source": [
+        "#There are four wines that the model has not seem\n",
         "#Choose number 0,1,2,3\n",
         "number = 3\n",
         "test1 = normed_prediction_cases.loc[[number]]\n",
