--- a/diabetesML.ipynb
+++ b/diabetesML.ipynb
@@ -6,7 +6,7 @@
       "name": "diabetesML.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMy++qKIuYvMsCjChjAK0IT",
+      "authorship_tag": "ABX9TyNHr3YHu7EZT7NkWqlM/fR6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,16 +27,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "RKPpcMi9dSQx",
-        "colab_type": "text"
-      },
-      "source": [
-        "# **Load the necessary libraries**"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "LfUezso7fFPi",
@@ -51,6 +41,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RKPpcMi9dSQx",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Load the necessary libraries**"
+      ]
     },
     {
       "cell_type": "code",
@@ -77,6 +77,7 @@
         "import seaborn as sns\n",
         "import numpy as np\n",
         "\n",
+        "from keras import optimizers\n",
         "from keras.utils import to_categorical\n",
         "from tensorflow import keras\n",
         "from tensorflow.keras import layers\n",
@@ -86,6 +87,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fLpRGLm348g1",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Can we predict which patients will get diabetes within five years.**"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -133,6 +144,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8l1FRWUH5YmL",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Examine the dataset**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "d0TnKwWBfsP_",
@@ -144,6 +165,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NCPZJOaK5gPL",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Is data missing?**"
+      ]
     },
     {
       "cell_type": "code",
@@ -159,6 +190,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cVl6_x345olQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Are the Diabetes/No diabetes classes balanced?**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "IB66MdqPfSva",
@@ -170,6 +211,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5JlZJGiK5wEn",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Are there any features that are strongly correlated?** "
+      ]
     },
     {
       "cell_type": "code",
@@ -189,6 +240,26 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GgbtsHc96ADm",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Prepare the data**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3Zbbzkdw6Erq",
+        "colab_type": "text"
+      },
+      "source": [
+        "Split the dataset into train and test sets"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "X6-uSRGJiR6o",
@@ -196,7 +267,7 @@
         "colab": {}
       },
       "source": [
-        "df_train = dataset.sample(frac=0.5,random_state=0)\n",
+        "df_train = dataset.sample(frac=0.8,random_state=0)\n",
         "df_test = dataset.drop(df_train.index)\n",
         "print(\"done\")"
       ],
@@ -220,18 +291,86 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "a0PpwdLOtGkZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "train_stats = df_train.describe()\n",
+        "train_stats = train_stats.transpose()\n",
+        "train_stats"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fo17lIbWs8Vm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "test_stats = df_test.describe()\n",
+        "test_stats = test_stats.transpose()\n",
+        "test_stats"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q6NSrRM2suKF",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def norm(x):\n",
+        "  return (x - train_stats['mean']) / train_stats['std']\n",
+        "\n",
+        "normed_train_data = norm(df_train)\n",
+        "normed_test_data = norm(df_test)\n",
+        "print(\"done\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "ShSUpniAiwMB",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
         "model = keras.Sequential()\n",
-        "model.add(Dense(12, input_dim=8, activation='relu'))\n",
+        "model.add(Dense(12, input_shape=([len(df_train.keys())]), activation='relu'))\n",
         "model.add(Dense(8, activation='relu'))\n",
         "model.add(Dense(1, activation='sigmoid'))"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rMz5-r8H2C9I",
+        "colab_type": "text"
+      },
+      "source": [
+        "https://keras.io/losses/\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eKwpxSkb4kGW",
+        "colab_type": "text"
+      },
+      "source": [
+        "https://keras.io/optimizers/"
+      ]
     },
     {
       "cell_type": "code",
@@ -241,7 +380,26 @@
         "colab": {}
       },
       "source": [
-        "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])"
+        "#'mean_squared_error' or 'binary_crossentropy' or 'mean_absolute_error' or \n",
+        "#'mean_absolute_percentage_error'\n",
+        "\n",
+        "adam = keras.optimizers.Adam(learning_rate=0.001, beta_1=0.9, beta_2=0.999, amsgrad=False)\n",
+        "sgd = keras.optimizers.SGD(learning_rate=0.01, momentum=0.0, nesterov=False)\n",
+        "rms = keras.optimizers.RMSprop(learning_rate=0.001, rho=0.9)\n",
+        "model.compile(loss='mean_squared_error', optimizer=adam, metrics=['accuracy','mean_squared_error'])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ysfV_pV6snXd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "EPOCHS = 5"
       ],
       "execution_count": 0,
       "outputs": []
@@ -256,7 +414,7 @@
       "source": [
         "history = model.fit(\n",
         "  normed_train_data, train_labels,\n",
-        "  epochs=EPOCHS, validation_split = 0.2, verbose=0,batch_size = 16 )"
+        "  epochs=EPOCHS, validation_split = 0.2, verbose=1,batch_size = 10 )"
       ],
       "execution_count": 0,
       "outputs": []
@@ -264,13 +422,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "a-Jy_iIzkPqt",
+        "id": "6qFVEGaJui7T",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "# fit the keras model on the dataset\n",
-        "model.fit(X, y, epochs=150, batch_size=10, verbose=0)"
+        "hist = pd.DataFrame(history.history)\n",
+        "hist['epochs'] = history.epoch\n",
+        "hist.tail(17)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -278,28 +437,70 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gACBS9QwdBMH",
+        "id": "cS9r4AnOv6h7",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "# split into input (X) and output (y) variables\n",
-        "X = dataset[:,0:8]\n",
-        "y = dataset[:,8]\n",
-        "# define the keras model\n",
-        "model = Sequential()\n",
-        "model.add(Dense(12, input_dim=8, activation='relu'))\n",
-        "model.add(Dense(8, activation='relu'))\n",
-        "model.add(Dense(1, activation='sigmoid'))\n",
-        "# compile the keras model\n",
-        "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
-        "# fit the keras model on the dataset\n",
-        "model.fit(X, y, epochs=150, batch_size=10, verbose=0)\n",
-        "# make class predictions with the model\n",
-        "predictions = model.predict_classes(X)\n",
-        "# summarize the first 5 cases\n",
-        "for i in range(5):\n",
-        "\tprint('%s => %d (expected %d)' % (X[i].tolist(), predictions[i], y[i]))"
+        "axes = plt.gca()\n",
+        "axes.set_ylim([0,0.5])\n",
+        "plt.plot(hist['loss'], label='training loss')\n",
+        "plt.plot(hist['val_loss'], label='testing loss')\n",
+        "plt.title('Loss')\n",
+        "plt.xlabel('epochs')\n",
+        "plt.ylabel('loss')\n",
+        "plt.legend()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2Y2B9WTdwAdm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "axes = plt.gca()\n",
+        "axes.set_ylim([0,1])\n",
+        "plt.plot(hist['accuracy'], label='training accuracy')\n",
+        "plt.plot(hist['val_accuracy'], label='testing accuracy')\n",
+        "plt.title('Accuracy')\n",
+        "plt.xlabel('epochs')\n",
+        "plt.ylabel('acc')\n",
+        "plt.legend()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "obaL4vUe7W6G",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "test_l = model.predict_classes(normed_test_data)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gXxlsTWe9HC3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "count = 0\n",
+        "for i in range(len(normed_test_data)):\n",
+        "  print(normed_test_data.iloc[i],test_labels.iloc[i],\" = \", test_l[i])\n",
+        "  if test_labels.iloc[i] == test_l[i]:\n",
+        "    count = count+1\n",
+        "print(count)"
       ],
       "execution_count": 0,
       "outputs": []
