--- a/WineTypeBC.ipynb
+++ b/WineTypeBC.ipynb
@@ -6,7 +6,7 @@
       "name": "WineTypeBC.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyN8HnbTUc8okaU0AxgVUPNm",
+      "authorship_tag": "ABX9TyNlh65bLaZHvMtqvYEc/MiQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -755,6 +755,21 @@
         "\n",
         "print(\"Testing set Mean Abs Error: {:5.2f}\".format(mae))\n",
         "print(\"Accuracy = \", acc)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W4nkeO2MlYHz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.metrics import confusion_matrix\n",
+        "test_l = model.predict_classes(normed_test_data)\n",
+        "confusion_matrix(test_labels, test_l)"
       ],
       "execution_count": 0,
       "outputs": []
