--- a/WineTypeBC.ipynb
+++ b/WineTypeBC.ipynb
@@ -6,7 +6,7 @@
       "name": "WineTypeBC.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNlh65bLaZHvMtqvYEc/MiQ",
+      "authorship_tag": "ABX9TyOhRgIkBqbEcSeStMHdaA9Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -769,6 +769,7 @@
       "source": [
         "from sklearn.metrics import confusion_matrix\n",
         "test_l = model.predict_classes(normed_test_data)\n",
+        "#0,0=true neg, 1,0=false neg, 1,1=true pos, 0,1=false pos\n",
         "confusion_matrix(test_labels, test_l)"
       ],
       "execution_count": 0,
